# link_to_qr_code

./: .gitignore  Dockerfile  README.md  make_barcode.py  pyproject.toml  requirements.txt  wsgi.py
.github/workflows/: cd.yml  ci.yml
barcode_gen/: __init__.py  cli.py  code128.py  qr.py
tests/: test_barcode_gen.py  test_web.py
web/: app.py
web/templates/: index.html
