[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "barcode-gen"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "qrcode[pil]>=7.0",
    "python-barcode>=0.14.0",
]

[tool.setuptools.packages.find]
include = ["barcode_gen*"]

[project.scripts]
barcode-gen = "barcode_gen.cli:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
